1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (bin_SCRIPTS): Add javacswarm.

	* javacswarm: New file.

1999-04-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*): Don't treat Class as
	freaky.
	(*removed-protocols*): Remove Class-related excluded protocols.
	(*removed-methods*): Likewise for method.
	(java-type-to-signature): Map Class to Ljava_lang_Class_2.  Remove
	freaky handling.
	(java-type-to-native-type): Handle Class.
	(java-argument-print-conversion): Handle jclass.

1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-argument-print-conversion): Add position
	argument and use it to offset new C variable strings.
	(java-print-method-invocation): Increment position in sync with
	arguments, pass to java-argument-print-conversion.
	(java-print-native-method): Accumulate arguments that are jstrings
	to strings.  If there are any, do a more complex call that
	initializes the C `strings' array and fills it with copies of the
	jstring arguments.  If there is a non-void return type, set a
	return variable, and then cleans up returning the return variable.
	If there are no jstring arguments, the call remains as it was.

1999-04-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-methods*): -getRetVal:buf: instead of
	getReturnVal.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javaswarm: Use eval "$JAVA .." instead of setting JAVA_HOME before
	running Java interpreter (eliminate superfluous use of JAVA_HOME
	for Java implementations where it is not used).

	* Makefile.am (Makefile.common $(SUBMAKEFILES)): Use JAVASTUBS_FUNCTION
	instead of java-run-all.

	* java-stub.el (set-dollar-sign, java-run-all-unicode,
	java-run-all-literal): New functions.
	(java-run-all): Add unicode flag key.
	(*dollar-sign*): New variable.
	(java-print-method-name, java-print-native-method-name): 
	Use *dollar-sign* instead of unicode mangling.
